[project]
name = "molmospaces-policy-zoo"
version = "0.1.0"
description = "Policy zoo for MolmoSpaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "molmo-spaces[mujoco] @ git+https://github.com/allenai/molmospaces.git@b4ed488c4e8cfb9a4abff177a21787ddc22f922c",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false
